# RLprompt

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.cursor/rules/: no-co-authored.mdc
.github/workflows/: ci.yml
data/: critic_memory.md  population.json  reward_history.json  system_prompt.md
data/logs/: interactions_20260219.md
data/prompts/: prompt_v1.md  prompt_v1.txt  prompt_v10.md  prompt_v11.md  prompt_v2.md  prompt_v2.txt  prompt_v3.md  prompt_v3.txt  prompt_v4.txt  prompt_v5.md  prompt_v5.txt  prompt_v6.md  prompt_v7.md  prompt_v8.md  prompt_v9.md
demos/: __init__.py
demos/human_watch/: __init__.py  common.py  evaluator.py  monitor.py  rag_info.md  reset_to_state_zero.py  run_backend.py  run_server.py  server.py
demos/human_watch/tests/: test_flow.py  test_monitor.py
docs/: ARCHITECTURE.md  GPRO.md  KEY_INNOVATIONS.md  METRICS.md  PARALLEL_EVAL.md  PARAMETRIZATION.md  README.md  USAGE_GUIDE.md
examples/: actor_critic_example.py  basic_refinement.py  gradio_feedback_example.py  hybrid_local_llm_example.py  hybrid_system_example.py  rl_env_example.py  two_stage_example.py  validation_loop_example.py
examples/gsm8k_experiment/: README.md  curate_hard_gsm8k.py  download_gsm8k.py  eval_test_only.py  run_gsm8k_train.py
src/prompt_rl/: __init__.py
src/prompt_rl/actor_critic/: __init__.py  actor.py  critic.py
src/prompt_rl/actor_critic_loop/: __init__.py  actor.py  config.py  critic.py  feedback.py  loop.py
src/prompt_rl/core/: __init__.py  cycle.py  policy.py  policy_schema.py  prompt.py  refiner.py
src/prompt_rl/critic/: __init__.py  backward.py  base.py  config.py  llm_critic.py  memory.py  optimizer.py  two_stage_critic.py  two_stage_prompts.py
src/prompt_rl/dataset/: __init__.py  judge.py  loop.py  sample.py
src/prompt_rl/evolution/: __init__.py  genome.py  operators.py  population.py
src/prompt_rl/feedback/: __init__.py  cursor_trace.py  gradio_ui.py  signals.py
src/prompt_rl/llm/: __init__.py  base.py  local_backend.py  mock.py  openai_backend.py
src/prompt_rl/loop/: __init__.py  online.py
src/prompt_rl/population/: __init__.py  genome.py  leaderboard.py
src/prompt_rl/rl/: __init__.py  env.py  gate.py  history.py  policy.py  reward.py  rewards.py
src/prompt_rl/training/: __init__.py  config.py  flow.py  gpro.py  loop.py  metrics.py
src/prompt_rl/utils/: __init__.py  parallel.py
src/prompt_rl/validation/: __init__.py  actor.py  judge.py  loop.py
tests/: __init__.py  test_actor_critic.py  test_core.py  test_dataset.py  test_evolution.py  test_hybrid_reward.py  test_llm.py  test_rl.py
