[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-rl"
version = "0.3.0"
description = "Reinforcement learning framework for prompt refinement with LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
keywords = ["llm", "reinforcement-learning", "prompt-engineering", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "typing-extensions>=4.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
gradio = ["gradio>=4.0.0"]
human-watch = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "playwright>=1.40.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
all = ["prompt-rl[gradio,human-watch,dev]"]

[project.urls]
Homepage = "https://github.com/your-username/prompt-rl"
Documentation = "https://github.com/your-username/prompt-rl#readme"
Repository = "https://github.com/your-username/prompt-rl"

[project.scripts]
rlprompt-backend = "demos.human_watch.run_backend:main"
rlprompt-serve = "demos.human_watch.run_server:main"
rlprompt-reset = "demos.human_watch.reset_to_state_zero:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["prompt_rl*", "demos*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
